--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,73 @@
   }
 }
 
+/* FONT FACE */
+@font-face {
+  font-family: "Livvic-Light";
+  src: url("/assets/fonts/Livvic-Light.ttf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Livvic-ExtraLight";
+  src: url("/assets/fonts/Livvic-ExtraLight.ttf");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Livvic-Regular";
+  src: url("/assets/fonts/Livvic-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Livvic-Bold";
+  src: url("/assets/fonts/Livvic-Bold.ttf");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Livvic-Medium";
+  src: url("/assets/fonts/Livvic-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Livvic-SemiBold";
+  src: url("/assets/fonts/Livvic-SemiBold.ttf");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Abril-Regular";
+  src: url('/assets/fonts/AbrilFatface-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* FONTS  */
+.Livvic-Regular {
+  font-family: Livvic-Regular;
+}
+.Livvic-Medium {
+  font-family: Livvic-Medium;
+}
+.Livvic-Semibold {
+  font-family: Livvic-SemiBold;
+}
+.Livvic-Bold {
+  font-family: Livvic-Bold;
+}
+.Abril-Regular {
+  font-family: Abril-Regular;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
